# policy-rag

./: .dockerignore  .gitignore  .replit  README.md  environment.yml  experiment.py  fine_tuning.ipynb  finetune_embedding.ipynb  golden_dataset.yml  heroku.Dockerfile  heroku.yml  pyproject.toml  replit.nix  sdg.py
.github/workflows/: heroku_deploy.yml  main.yml
chainlit/: heroku.Dockerfile  requirements.txt
experiments/: chunk_100_over_25.yml  chunk_800_over_100.yml  chunk_semantic.yml  embeddings_base_gte_large.yml  embeddings_finetuned_gte_large.yml  embeddings_oai_te3_large.yml
hf_space/: Dockerfile  README.md  requirements.txt
policy_rag/: app_utils.py  chains.py  data_models.py  eval_utils.py  sdg_utils.py  text_utils.py  vectorstore_utils.py
policy_rag/metrics/: __init__.py  _answer_relevancy.py  _context_precision.py  _context_recall.py  _faithfulness.py
