[tool.poetry]
name = "policy-rag"
version = "0.1.0"
description = "An AI Policy RAG App"
authors = ["Ledger West <ledger.west@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "0.3.2"
numpy = ">=1,<2"
chainlit = "1.2.0"
openai = "^1.51.2"
langchain-openai = "^0.2.2"
langchain-huggingface = "^0.1.0"
langchain-core = ">=0.2.39,<0.4"
langgraph = ">=0.2.35,<0.3.0"
langchain = "^0.3.3"
langchain-text-splitters = "^0.3.0"
langchain-experimental = "^0.3.2"
pymupdf = "^1.24.11"
tiktoken = "^0.8.0"
qdrant-client = "^1.12.0"
langchain-qdrant = "^0.1.4"
langsmith = "^0.1.133"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
